--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -165,6 +165,12 @@ config CPU_FREQ_DEFAULT_GOV_ZENERACTIVE
 	help
 	Use the CPUFreq governor 'zeneractive' as default.
 
+config CPU_FREQ_DEFAULT_GOV_INTERACTIVEX
+  	bool "interactiveX"
+  	select CPU_FREQ_GOV_INTERACTIVEX
+  	help
+    	  Use the CPUFreq governor 'interactiveX' as default.
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -334,6 +340,14 @@ config CPU_FREQ_GOV_ZENERACTIVE
 	suspend/wake.
 	For details, take a look at linux/Documentation/cpu-freq.
 	If in doubt, say N
+
+config CPU_FREQ_GOV_INTERACTIVEX
+	tristate "'interactiveX' cpufreq governor"
+	depends on CPU_FREQ
+	help
+	   'interactiveX' - interactive governor with early suspend support added.
+	    This governor uses hotplug to shutdown and start up cpu1 when suspended.
+	    If in doubt, say N.
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
