--- a/arch/arm/configs/tuna_defconfig
+++ b/arch/arm/configs/tuna_defconfig
@@ -511,6 +511,7 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_KTOONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ZENERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_HOTPLUG is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
@@ -525,6 +526,7 @@ CONFIG_CPU_FREQ_GOV_DYNAMIC_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_KTOONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_ZENERACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
