--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -171,6 +171,15 @@ config CPU_FREQ_DEFAULT_GOV_INTERACTIVEX
   	help
     	  Use the CPUFreq governor 'interactiveX' as default.
 
+config CPU_FREQ_DEFAULT_GOV_ZZMOOVE
+        bool "zzmoove"
+        select CPU_FREQ_GOV_ZZMOOVE
+        select CPU_FREQ_GOV_PERFORMANCE
+        help
+        Use the CPUFreq governor 'zzmoove' as default, using predefined
+        frequency lookup tables and optimized scaling triggers instead of
+        % frequency steps to get smooth up/downscaling dependant on CPU load.
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -348,6 +357,16 @@ config CPU_FREQ_GOV_INTERACTIVEX
 	   'interactiveX' - interactive governor with early suspend support added.
 	    This governor uses hotplug to shutdown and start up cpu1 when suspended.
 	    If in doubt, say N.
+
+config CPU_FREQ_GOV_ZZMOOVE
+        tristate "'zzmoove' cpufreq governor"
+        depends on CPU_FREQ
+        help
+          'zzmoove' - based on cpufreq_conservative, using predefined
+          frequency lookup tables and optimized scaling triggers instead of
+          % frequency steps to get smooth up/downscaling dependant on CPU load.
+
+          If in doubt, say N.
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
