--- a/block/Makefile
+++ b/block/Makefile
@@ -19,5 +19,6 @@ obj-$(CONFIG_IOSCHED_ROW)	+= row-iosched.o
 obj-$(CONFIG_IOSCHED_ZEN)	+= zen-iosched.o
 obj-$(CONFIG_IOSCHED_ROW)  	+= row-iosched.o
 obj-$(CONFIG_BLOCK_COMPAT)	+= compat_ioctl.o
+obj-$(CONFIG_IOSCHED_SIOPLUS)		+= sioplus-iosched.o
 obj-$(CONFIG_BLK_DEV_INTEGRITY)	+= blk-integrity.o
 
