Sound Control cleanup, default n
Change-Id: Ide8b96b5cb5adfae08dc1e5cc359637120ba8c1a

--- a/arch/arm/configs/tuna_defconfig
+++ b/arch/arm/configs/tuna_defconfig
@@ -345,6 +345,7 @@ CONFIG_OMAP4460_GPU_OVERCLOCK=y
 CONFIG_OMAP4_OVERRIDE_MPU_TRIM=y
 CONFIG_OMAP_SMARTREFLEX_CUSTOM_SENSOR=y
 CONFIG_OMAP4460_OVERCLOCKING=y
+CONFIG_SOUND_CONTROL=y
 
 #
 # System MMU
