--- a/arch/arm/configs/tuna_defconfig
+++ b/arch/arm/configs/tuna_defconfig
@@ -1175,7 +1175,7 @@ CONFIG_LTE_LINK_USB=y
 CONFIG_LTE_MODEM_CMC221=y
 # CONFIG_GCCORE is not set
 # CONFIG_CACHE2DMANAGER is not set
-# CONFIG_COLOR_CONTROL is not set
+CONFIG_COLOR_CONTROL=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
