tuna: update defconfig
add zeneractive cpu governor

Change-Id: I6f5865d2617c3b246784a65309cfeb6ce5ff920b

--- a/arch/arm/configs/tuna_defconfig
+++ b/arch/arm/configs/tuna_defconfig
@@ -509,6 +509,7 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_DYNAMIC_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_KTOONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ZENERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEX is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_HOTPLUG is not set
@@ -522,6 +523,7 @@ CONFIG_CPU_FREQ_GOV_HOTPLUG=y
 CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS=y
 CONFIG_CPU_FREQ_GOV_DYNAMIC_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_KTOONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_ZENERACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
