--- a/arch/arm/configs/tuna_defconfig
+++ b/arch/arm/configs/tuna_defconfig
@@ -523,7 +523,7 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
-CONFIG_CPU_FREQ_GOV_HOTPLUG=y
+# CONFIG_CPU_FREQ_GOV_HOTPLUG is not set
 CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS=y
 CONFIG_CPU_FREQ_GOV_DYNAMIC_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_KTOONSERVATIVE=y
