defconfig: enable voltage oc
Change-Id: I75bbe0b48d958718338bf5251c9f2553e2567ca6

--- a/arch/arm/configs/tuna_defconfig
+++ b/arch/arm/configs/tuna_defconfig
@@ -345,6 +345,9 @@ CONFIG_OMAP4_PPA_CPU1_ONLINE_BUG=y
 CONFIG_OMAP4_HSOTG_ED_CORRECTION=y
 # CONFIG_OMAP_RFKILL_STE_MODEM is not set
 CONFIG_OMAP4460_GPU_OVERCLOCK=y
+CONFIG_IVA_OVERCLOCK=y
+CONFIG_CUSTOM_VOLTAGE=y
+CONFIG_OMAP_REGULATOR_VOLTCHANGE=y
 CONFIG_OMAP4_OVERRIDE_MPU_TRIM=y
 CONFIG_OMAP_SMARTREFLEX_CUSTOM_SENSOR=y
 CONFIG_OMAP4460_OVERCLOCKING=y
