tuna: switch to XZ compression
Change-Id: I3bff8778fa764c760b080bea672e50d822e7fc92

--- a/arch/arm/configs/tuna_defconfig
+++ b/arch/arm/configs/tuna_defconfig
@@ -490,3 +490,6 @@ CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_LZ4=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRC_CCITT=y
+CONFIG_HAVE_KERNEL_XZ=y
+CONFIG_KERNEL_XZ=y
+# CONFIG_KERNEL_GZIP is not set
