tuna defconfigs: use optimized CRC32 & RWSEM algorithms
Change-Id: I080d2b742ce86b7355b49a080eaa8892628e9f67

--- a/arch/arm/configs/tuna_defconfig
+++ b/arch/arm/configs/tuna_defconfig
@@ -494,3 +494,9 @@ CONFIG_HAVE_KERNEL_XZ=y
 CONFIG_KERNEL_XZ=y
 # CONFIG_KERNEL_GZIP is not set
 CONFIG_ALLOW_CPU_ALIGNMENT=y
+CONFIG_RWSEM_XCHGADD_ALGORITHM=y
+# CONFIG_CRC32_SELFTEST is not set
+CONFIG_CRC32_SLICEBY8=y
+# CONFIG_CRC32_SLICEBY4 is not set
+# CONFIG_CRC32_SARWATE is not set
+# CONFIG_CRC32_BIT is not set
