defconfig: drop CMA
Change-Id: Ie9b23877cfdd5e49a88727f3fff6977f137411aa

--- a/arch/arm/configs/tuna_defconfig
+++ b/arch/arm/configs/tuna_defconfig
@@ -218,7 +218,7 @@ CONFIG_CFG80211_ALLOW_RECONNECT=y
 CONFIG_RFKILL=y
 CONFIG_RFKILL_INPUT=y
 CONFIG_SYNC=y
-CONFIG_CMA=y
+# CONFIG_CMA is not set
 CONFIG_MTD=y
 CONFIG_MTD_CHAR=y
 CONFIG_MTD_BLOCK=y
