defconfig: enable color control
Change-Id: I4c584241b892389f8a41d53094c15a701716998e

--- a/arch/arm/configs/tuna_defconfig
+++ b/arch/arm/configs/tuna_defconfig
@@ -500,3 +500,4 @@ CONFIG_CRC32_SLICEBY8=y
 # CONFIG_CRC32_SLICEBY4 is not set
 # CONFIG_CRC32_SARWATE is not set
 # CONFIG_CRC32_BIT is not set
+CONFIG_COLOR_CONTROL=y
