defconfig: enable GPU overclock
Change-Id: Ie8df7bb7fe532a77746531aa9af4c37fdbb8e243

--- a/arch/arm/configs/tuna_defconfig
+++ b/arch/arm/configs/tuna_defconfig
@@ -501,3 +501,4 @@ CONFIG_CRC32_SLICEBY8=y
 # CONFIG_CRC32_SARWATE is not set
 # CONFIG_CRC32_BIT is not set
 CONFIG_COLOR_CONTROL=y
+CONFIG_OMAP4460_GPU_OVERCLOCK=y
